--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,80 @@
 name: streamlit
 channels:
+  - pytorch
+  - nvidia
   - conda-forge
   - defaults
 dependencies:
   - blas=1.0=mkl
   - bottleneck=1.3.5=py38hbdcd294_0
+  - brotlipy=0.7.0=py38h2bbff1b_1003
   - ca-certificates=2022.9.24=h5b45459_0
   - certifi=2022.9.24=pyhd8ed1ab_0
+  - cffi=1.15.1=py38h2bbff1b_0
   - cmdstan=2.29.2=hc4b6281_2
   - cmdstanpy=1.0.8=pyhd8ed1ab_0
   - convertdate=2.4.0=pyhd8ed1ab_0
+  - cryptography=38.0.1=py38h21b164f_0
+  - cuda=11.6.2=0
+  - cuda-cccl=11.6.55=0
+  - cuda-command-line-tools=11.6.2=0
+  - cuda-compiler=11.6.2=0
+  - cuda-cudart=11.6.55=0
+  - cuda-cudart-dev=11.6.55=0
+  - cuda-cuobjdump=11.6.124=0
+  - cuda-cupti=11.6.124=0
+  - cuda-cuxxfilt=11.6.124=0
+  - cuda-libraries=11.6.2=0
+  - cuda-libraries-dev=11.6.2=0
+  - cuda-memcheck=11.8.86=0
+  - cuda-nsight-compute=11.8.0=0
+  - cuda-nvcc=11.6.124=0
+  - cuda-nvdisasm=11.8.86=0
+  - cuda-nvml-dev=11.6.55=0
+  - cuda-nvprof=11.8.87=0
+  - cuda-nvprune=11.6.124=0
+  - cuda-nvrtc=11.6.124=0
+  - cuda-nvrtc-dev=11.6.124=0
+  - cuda-nvtx=11.6.124=0
+  - cuda-nvvp=11.8.87=0
+  - cuda-runtime=11.6.2=0
+  - cuda-sanitizer-api=11.8.86=0
+  - cuda-toolkit=11.6.2=0
+  - cuda-tools=11.6.2=0
+  - cuda-visual-tools=11.6.2=0
   - cycler=0.11.0=pyhd8ed1ab_0
   - ephem=4.1.3=py38h294d835_4
   - freetype=2.10.4=h546665d_1
   - hijri-converter=2.2.4=pyhd8ed1ab_0
   - holidays=0.16=pyhd8ed1ab_0
+  - idna=3.4=py38haa95532_0
   - intel-openmp=2022.1.0=h57928b3_3787
+  - jpeg=9e=h2bbff1b_0
   - kiwisolver=1.4.4=py38hbd9d945_0
   - korean_lunar_calendar=0.3.1=pyhd8ed1ab_0
+  - lerc=3.0=hd77b12b_0
+  - libcublas=11.11.3.6=0
+  - libcublas-dev=11.11.3.6=0
+  - libcufft=10.9.0.58=0
+  - libcufft-dev=10.9.0.58=0
+  - libcurand=10.3.0.86=0
+  - libcurand-dev=10.3.0.86=0
+  - libcusolver=11.4.1.48=0
+  - libcusolver-dev=11.4.1.48=0
+  - libcusparse=11.7.5.86=0
+  - libcusparse-dev=11.7.5.86=0
+  - libdeflate=1.8=h2bbff1b_5
+  - libnpp=11.8.0.86=0
+  - libnpp-dev=11.8.0.86=0
+  - libnvjpeg=11.9.0.86=0
+  - libnvjpeg-dev=11.9.0.86=0
   - libpng=1.6.37=h2a8f88b_0
+  - libtiff=4.4.0=h8a3f274_1
+  - libuv=1.40.0=he774522_0
+  - libwebp=1.2.4=h2bbff1b_0
+  - libwebp-base=1.2.4=h2bbff1b_0
   - lunarcalendar=0.0.9=py_0
+  - lz4-c=1.9.3=h2bbff1b_1
   - m2-bash=4.3.042=5
   - m2-coreutils=8.25=102
   - m2-filesystem=2016.04=4
@@ -61,6 +116,7 @@ dependencies:
   - mkl_fft=1.3.1=py38hf2c5eee_1
   - mkl_random=1.2.2=py38h60cbd38_0
   - msys2-conda-epoch=20160418=1
+  - nsight-compute=2022.3.0.22=0
   - numexpr=2.8.3=py38hb80d3ca_0
   - numpy=1.23.3=py38h3b20f71_0
   - numpy-base=1.23.3=py38h4da318b_0
@@ -68,21 +124,34 @@ dependencies:
   - packaging=21.3=pyhd8ed1ab_0
   - pip=22.2.2=py38haa95532_0
   - prophet=1.1.1=py38haa244fe_1
+  - pycparser=2.21=pyhd3eb1b0_0
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pysocks=1.7.1=py38haa95532_0
   - python=3.8.0=hff0d562_2
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.8=2_cp38
+  - pytorch=1.13.0=py3.8_cuda11.6_cudnn8_0
+  - pytorch-cuda=11.6=h867d48c_0
+  - pytorch-mutex=1.0=cuda
+  - requests=2.28.1=py38haa95532_0
   - setuptools=63.4.1=py38haa95532_0
   - six=1.16.0=pyh6c4a22f_0
   - sqlite=3.39.3=h2bbff1b_0
   - tbb=2021.6.0=h59b6b97_0
+  - tk=8.6.12=h2bbff1b_0
   - tornado=6.2=py38h294d835_0
   - tqdm=4.64.1=pyhd8ed1ab_0
+  - typing_extensions=4.3.0=py38haa95532_0
+  - urllib3=1.26.12=py38haa95532_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.37.1=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py38haa95532_0
   - wincertstore=0.2=py38haa95532_2
+  - xz=5.2.6=h8cc25b3_0
   - zlib=1.2.11=h8d14728_1011
+  - zstd=1.5.0=h19a0ad4_1
   - pip:
     - altair==4.2.0
     - attrs==22.1.0
@@ -96,10 +165,11 @@ dependencies:
     - contourpy==1.0.5
     - decorator==5.1.1
     - entrypoints==0.4
+    - filelock==3.8.0
     - fonttools==4.38.0
     - gitdb==4.0.9
     - gitpython==3.1.28
-    - idna==3.4
+    - huggingface-hub==0.10.1
     - importlib-metadata==5.0.0
     - importlib-resources==5.10.0
     - jinja2==3.1.2
@@ -122,19 +192,24 @@ dependencies:
     - pyrsistent==0.18.1
     - pytz==2022.4
     - pytz-deprecation-shim==0.1.0.post0
-    - requests==2.28.1
+    - pyyaml==6.0
+    - regex==2022.10.31
     - rich==12.6.0
     - semver==2.13.0
+    - sentencepiece==0.1.97
     - setuptools-git==1.2
     - smmap==5.0.0
     - streamlit==1.13.0
     - tenacity==8.1.0
+    - tokenizers==0.13.1
     - toml==0.10.2
     - toolz==0.12.0
+    - torchaudio==0.13.0
+    - torchvision==0.14.0
+    - transformers==4.24.0
     - typing-extensions==4.4.0
     - tzdata==2022.4
     - tzlocal==4.2
-    - urllib3==1.26.12
     - validators==0.20.0
     - watchdog==2.1.9
     - zipp==3.9.0
